# glycin_krita

./: .gitignore  Cargo.toml  LICENSE  README.md  glycin-krita.conf  glycin-krita.preinstalled.conf
src/: main.rs
